# grafeno

./: .gitignore  CITATION.cff  Grafeno Visualization.ipynb  Makefile  Pipfile  README.md  TODO  baseline.py  common.py  default.yaml  dev-requirements.txt  eval_summary.sh  experiment.py  fusion.yaml  generalize_test.py  graph.json  plaza_summary.py  pyproject.toml  requirements.txt  server.py  summary.py  test.py  test_arch.py  topic_detect.py
conceptgraphs/: __init__.py  clustering.py  clustering2.py  freeling_full.cfg  freeling_parse.py  functor.py  generalize.py  grammar.py  graph.py  hits.py  html2text.py  operations.py  pipeline.py  thesis.py  transformer.py  tree_transform.py
configs/: all.yaml  conceptmap.yaml  cypher.yaml  fusion.yaml  semantic.yaml  summary.yaml  summary_ca.yaml  summary_es.yaml
docs/: .gitignore  Makefile  conf.py  configs.rst  examples.rst  index.rst  intro.rst  requirements.txt
experiments/: ours.py  plaza.py  plaza_plus_verbs.py  unique_deep.py
grafeno/: __init__.py  _parse_freeling.py  freeling_deps_en.cfg  freeling_parse.py  graph.py  jupyter.py  pipeline.py  setup.py
modules/: all_concepts.py  base.py  basic_transform.py  deep_grammar.py  extend.py  lesk_link.py  newgrammar.py  noun_extract.py  plaza.py  pos_extract.py  prolog.py  sentence_record.py  sentence_recorder.py  similarity_link.py  simple_nlg.py  tag_extract.py  transform.py  triplet_gen.py
res/: config.tpl
scripts/: eval_plaza.sh  eval_summary.sh  plot_eval.gnuplot  plot_eval.plg  rouge_eval.js
src/: __init__.py  clustering.py  common.py  experiment.py  (+2 more)
(+127 files in other folders)
