[project]
name = "grafeno"
version = "0.4.0"
description = "Concept graph library"
authors = [
    {name = "Antonio F. G. Sevilla", email = "afgs@ucm.es"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = "~=3.7.0"
dependencies = [
    "spacy~=2.0",
    "networkx~=2.2",
    "PyYAML",
    "pip>=24.0",
]

[project.optional-dependencies]

# For running the web service
web = ["bottle"]

# For using wordnet
lexical = ["nltk"]

# For clustering modules
modules = ["pexpect", "numpy", "scipy"]

[project.scripts]
setup = "grafeno.setup:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
